# Flow-VINS

./: CMakeLists.txt  README.md  package.xml  vio_system_node.cc
config/: vio_system_config.rviz
config/euroc/: euroc_mono_imu_config.yaml  euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml
config/openloris/: camera.yaml  openloris_rgbd_imu_config.yaml
config/realsense/: realsense_rgbd_imu_config.yaml  realsense_rgbd_px4_config.yaml  realsense_stereo_imu_config.yaml  realsense_stereo_imu_config2.yaml  right.yaml
config/rviz/: surfel.rviz  vio_rviz_config.rviz
config/tum/: tum_mono_config.yaml
estimator/: CMakeLists.txt  estimator_node.cc  interface.cc  interface.h  package.xml  vio_system_node.cc
estimator/config/euroc/: euroc_mono_imu_config.yaml  euroc_stereo_config.yaml  euroc_stereo_imu_config.yaml
estimator/config/realsense/: camera.yaml  realsense_rgbd_imu_config.yaml  realsense_stereo_imu_config.yaml
estimator/config/rviz/: vio_rviz_config.rviz
estimator/config/tum/: camera.yaml  tum_mono_config.yaml
estimator/include/: common.h  estimator.h  factor.h  feature.h  initialize.h  kalmanfilter.h  loopfusion.h  parameter.h  parameters.h  publisher.h  segment.h
estimator/launch/: vins_euroc_mono_imu.launch  vins_euroc_stereo_imu.launch  vins_realsense_rgbd_imu.launch  vins_realsense_stereo_imu.launch  vins_tum_rgbd.launch
estimator/src/: common.cc  estimator.cc  factor.cc  feature.cc  initialize.cc  kalmanfilter.cc  loopfusion.cc  parameter.cc  parameters.cc  publisher.cc  segment.cc
include/: Common.h  Estimator.h  FactorGraph.h  Feature.h  HealthyCheck.h  Initialize.h  KalmanFilter.h  LoopFusion.h  Parameters.h  Publisher.h  Segment.h  common.h  estimator.h  feature.h  initialize.h  loopfusion.h  parameters.h  publisher.h  segment.h
launch/: launch_euroc.py  launch_openloris.py  launch_realsense.py  launch_tum.py  vins_euroc_stereo.launch
loopfusion/: CMakeLists.txt  interface.cc  interface.h  loopfusion_node.cc  package.xml
loopfusion/include/: keyframe.h  parameter.h  posegraph.h
loopfusion/src/: keyframe.cc  parameter.cc  posegraph.cc
segment/: CMakeLists.txt  package.xml  segment_node.cc
segment/include/: logging.h  parameter.h  segment.h
segment/src/: parameter.cc  segment.cc
src/: Common.cpp  Estimator.cpp  FactorGraph.cpp  Feature.cpp  HealthyCheck.cpp  Initialize.cpp  KalmanFilter.cpp  LoopFusion.cpp  Parameters.cpp  Publisher.cpp  Segment.cpp  estimator.cc  factor.cc  feature.cc  initialize.cc  parameters.cc  publisher.cc
utils/: logger.h  tictoc.h  utils.h
